移除项目看板中的成本敏感信息

--- a/reports/2026年度项目甘特图.html
+++ b/reports/2026年度项目甘特图.html
@@ -662,14 +662,14 @@
                 <div></div><div></div><div></div><div></div><div></div><div></div>
             </div>
             <div class="gantt-row">
-                <div class="task-name sub-task">刘西平老师定位决策<span class="owner">@阿宝姐</span><span class="dep">~1.65万/场，全年~10万</span></div>
+                <div class="task-name sub-task">刘西平老师定位决策<span class="owner">@阿宝姐</span></div>
                 <div></div><div></div>
                 <div><div class="gantt-bar milestone">3月初定论</div></div>
                 <div></div><div></div><div></div>
                 <div></div><div></div><div></div><div></div><div></div><div></div>
             </div>
             <div class="gantt-row">
-                <div class="task-name sub-task">凯文老师参与线上课设计<span class="owner">@阿宝姐</span><span class="dep">5%利润~50-60万/年</span></div>
+                <div class="task-name sub-task">凯文老师参与线上课设计<span class="owner">@阿宝姐</span></div>
                 <div></div><div></div>
                 <div><div class="gantt-bar not-started"></div></div>
                 <div><div class="gantt-bar not-started">深度参与</div></div>
@@ -704,7 +704,7 @@
                 <div class="task-name sub-task">招聘技术人员<span class="owner">@阿宝姐</span></div>
                 <div></div>
                 <div><div class="gantt-bar milestone">2月</div></div>
-                <div><div class="gantt-bar milestone">3月 ~2万/月</div></div>
+                <div><div class="gantt-bar milestone">3月</div></div>
                 <div></div><div></div><div></div>
                 <div></div><div></div><div></div><div></div><div></div><div></div>
             </div>
