更新智能体产品时间轴：沟通汇报机器人、高管思维、AI答疑、垂直岗位机器人

--- a/reports/2026年度项目甘特图.html
+++ b/reports/2026年度项目甘特图.html
@@ -223,7 +223,7 @@
         <div class="target">年度目标：5000万</div>
     </div>
 
-    <div class="update-info">最后更新：2026-01-21 | 数据源：飞书多维表格</div>
+    <div class="update-info">最后更新：2026-01-24 | 数据源：飞书多维表格</div>
 
     <!-- 收入目标 -->
     <div class="revenue-section">
@@ -267,8 +267,10 @@
         <h2>1-2月紧急任务</h2>
         <ul class="focus-list">
             <li><span class="priority-tag p0">P0</span> 2月7-8日第三期线下课（重大改版）</li>
-            <li><span class="priority-tag p0">P0</span> 1月底沟通AI Agent上线</li>
+            <li><span class="priority-tag p0">P0</span> 1月底沟通汇报机器人内测完成</li>
+            <li><span class="priority-tag p0">P0</span> 2月初开春后沟通汇报机器人正式推广</li>
             <li><span class="priority-tag p0">P0</span> 1月底团队1v1 Review完成</li>
+            <li><span class="priority-tag p1">P1</span> 2-3月高管思维机器人上线</li>
             <li><span class="priority-tag p1">P1</span> 2月底各部门数据看板+工资调整</li>
             <li><span class="priority-tag p1">P1</span> 2-3月招聘技术人员</li>
             <li><span class="priority-tag p2">P2</span> 2月底求职课与AI课拆分</li>
@@ -283,8 +285,8 @@
             第三期线下课(2月) <span class="dep-arrow">→</span> 第四期定稿(3月) <span class="dep-arrow">→</span> 4月转线上 <span class="dep-arrow">→</span> 每2-3月一次线下课
         </div>
         <div class="dep-item">
-            <strong>爆款产品：</strong>
-            沟通Agent(1月底) <span class="dep-arrow">→</span> 汇报工具(2月) <span class="dep-arrow">→</span> 战略分析(2月底) <span class="dep-arrow">→</span> 职场AI系列(4-5月) <span class="dep-arrow">→</span> AI职场Hub(6月)
+            <strong>智能体产品：</strong>
+            沟通汇报机器人(1月底内测→2月推广) <span class="dep-arrow">→</span> 高管思维机器人(2-3月) <span class="dep-arrow">→</span> AI答疑机器人(4月) <span class="dep-arrow">→</span> 垂直岗位机器人(3-5月开发) <span class="dep-arrow">→</span> AI职场Hub(6月)
         </div>
         <div class="dep-item">
             <strong>ToB业务：</strong>
@@ -398,51 +400,73 @@
 
     <!-- 爆款产品甘特图 -->
     <div class="gantt-container">
-        <h2 class="gantt-title">二、爆款产品-AI工具（目标：800-1500万）</h2>
+        <h2 class="gantt-title">二、爆款产品-AI智能体（目标：800-1500万）</h2>
         <div class="gantt-chart">
             <div class="gantt-header">
                 <div class="task-col">任务</div>
                 <div>1月</div><div>2月</div><div>3月</div><div>4月</div><div>5月</div><div>6月</div>
                 <div>7月</div><div>8月</div><div>9月</div><div>10月</div><div>11月</div><div>12月</div>
             </div>
+            <!-- 2.1 核心智能体（第一波） -->
             <div class="gantt-row">
-                <div class="task-name"><strong>2.1 AI工具系列</strong></div>
+                <div class="task-name"><strong>2.1 核心智能体（第一波）</strong></div>
                 <div></div><div></div><div></div><div></div><div></div><div></div>
                 <div></div><div></div><div></div><div></div><div></div><div></div>
             </div>
             <div class="gantt-row">
-                <div class="task-name sub-task">沟通AI Agent上线<span class="owner">@阿宝姐</span></div>
-                <div><div class="gantt-bar in-progress">1月底</div></div>
-                <div></div><div></div><div></div><div></div><div></div>
-                <div></div><div></div><div></div><div></div><div></div><div></div>
-            </div>
-            <div class="gantt-row">
-                <div class="task-name sub-task">汇报AI工具上线<span class="owner">@阿宝姐</span><span class="dep">依赖:沟通Agent</span></div>
-                <div></div>
-                <div><div class="gantt-bar milestone">2月</div></div>
+                <div class="task-name sub-task">沟通汇报机器人<span class="owner">@阿宝姐</span></div>
+                <div><div class="gantt-bar in-progress">内测中</div></div>
+                <div><div class="gantt-bar milestone">开春推广</div></div>
                 <div></div><div></div><div></div><div></div>
                 <div></div><div></div><div></div><div></div><div></div><div></div>
             </div>
             <div class="gantt-row">
-                <div class="task-name sub-task">战略分析AI工具上线<span class="owner">@阿宝姐</span><span class="dep">依赖:汇报工具</span></div>
+                <div class="task-name sub-task">高管思维机器人<span class="owner">@阿宝姐</span></div>
                 <div></div>
-                <div><div class="gantt-bar milestone">2月底</div></div>
-                <div></div><div></div><div></div><div></div>
-                <div></div><div></div><div></div><div></div><div></div><div></div>
-            </div>
-            <div class="gantt-row">
-                <div class="task-name sub-task">职场AI工具系列<span class="owner">@阿宝姐</span></div>
+                <div><div class="gantt-bar not-started"></div></div>
+                <div><div class="gantt-bar milestone">2-3月上线</div></div>
                 <div></div><div></div><div></div>
-                <div><div class="gantt-bar not-started"></div></div>
-                <div><div class="gantt-bar not-started">4-5月</div></div>
-                <div></div>
+                <div></div><div></div><div></div><div></div><div></div><div></div>
+            </div>
+            <!-- 2.2 配套智能体（第二波） -->
+            <div class="gantt-row">
+                <div class="task-name"><strong>2.2 配套智能体（第二波）</strong></div>
+                <div></div><div></div><div></div><div></div><div></div><div></div>
                 <div></div><div></div><div></div><div></div><div></div><div></div>
             </div>
             <div class="gantt-row">
-                <div class="task-name sub-task">AI职场Hub上线<span class="owner">@阿宝姐+技术</span><span class="dep">依赖:职场AI系列</span></div>
+                <div class="task-name sub-task">AI使用答疑机器人<span class="owner">@阿宝姐</span><span class="dep">配合转线上课</span></div>
+                <div></div><div></div><div></div>
+                <div><div class="gantt-bar milestone">4月上线</div></div>
+                <div></div><div></div>
+                <div></div><div></div><div></div><div></div><div></div><div></div>
+            </div>
+            <!-- 2.3 垂直岗位智能体（第三波） -->
+            <div class="gantt-row">
+                <div class="task-name"><strong>2.3 垂直岗位智能体（第三波）</strong></div>
+                <div></div><div></div><div></div><div></div><div></div><div></div>
+                <div></div><div></div><div></div><div></div><div></div><div></div>
+            </div>
+            <div class="gantt-row">
+                <div class="task-name sub-task">垂直岗位机器人（财务/自媒体等）<span class="owner">@阿宝姐</span></div>
+                <div></div><div></div>
+                <div><div class="gantt-bar not-started">开始开发</div></div>
+                <div><div class="gantt-bar not-started"></div></div>
+                <div><div class="gantt-bar milestone">4-5月</div></div>
+                <div></div>
+                <div></div><div></div><div></div><div></div><div></div><div></div>
+            </div>
+            <!-- 2.4 整合平台 -->
+            <div class="gantt-row">
+                <div class="task-name"><strong>2.4 智能体平台整合</strong></div>
+                <div></div><div></div><div></div><div></div><div></div><div></div>
+                <div></div><div></div><div></div><div></div><div></div><div></div>
+            </div>
+            <div class="gantt-row">
+                <div class="task-name sub-task">AI职场Hub上线<span class="owner">@阿宝姐+技术</span></div>
                 <div></div><div></div><div></div><div></div>
                 <div><div class="gantt-bar not-started"></div></div>
-                <div><div class="gantt-bar milestone">6月前</div></div>
+                <div><div class="gantt-bar milestone">6月上线</div></div>
                 <div></div><div></div><div></div><div></div><div></div><div></div>
             </div>
             <div class="gantt-row">
@@ -724,7 +748,7 @@
         <div class="milestone-grid">
             <div class="milestone-card">
                 <div class="milestone-date">1月底</div>
-                <div class="milestone-title">沟通AI Agent上线</div>
+                <div class="milestone-title">沟通汇报机器人内测</div>
                 <span class="milestone-status in-progress">进行中</span>
             </div>
             <div class="milestone-card">
@@ -733,13 +757,18 @@
                 <span class="milestone-status in-progress">进行中</span>
             </div>
             <div class="milestone-card">
+                <div class="milestone-date">2月初</div>
+                <div class="milestone-title">沟通汇报机器人正式推广</div>
+                <span class="milestone-status not-started">未开始</span>
+            </div>
+            <div class="milestone-card">
                 <div class="milestone-date">2月7-8日</div>
                 <div class="milestone-title">第三期线下课（重大改版）</div>
                 <span class="milestone-status not-started">未开始</span>
             </div>
             <div class="milestone-card">
-                <div class="milestone-date">2月底</div>
-                <div class="milestone-title">战略分析AI工具上线</div>
+                <div class="milestone-date">2-3月</div>
+                <div class="milestone-title">高管思维机器人上线</div>
                 <span class="milestone-status not-started">未开始</span>
             </div>
             <div class="milestone-card">
@@ -753,8 +782,13 @@
                 <span class="milestone-status not-started">未开始</span>
             </div>
             <div class="milestone-card">
+                <div class="milestone-date">3-5月</div>
+                <div class="milestone-title">垂直岗位机器人开发</div>
+                <span class="milestone-status not-started">未开始</span>
+            </div>
+            <div class="milestone-card">
                 <div class="milestone-date">4月</div>
-                <div class="milestone-title">转线上课为主</div>
+                <div class="milestone-title">转线上课为主 + AI答疑机器人</div>
                 <span class="milestone-status not-started">未开始</span>
             </div>
             <div class="milestone-card">
